--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +14,35 @@
     <link rel="apple-touch-icon" href="icons/icon-152x152.png">
     <meta name="msapplication-TileImage" content="icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
+        <h1>My PWA</h1>
+
+        <div>
+            <img src='gallery/1.jpg'>
+            <img src='gallery/2.jpg'>
+            <img src='gallery/3.jpg'>
+        </div>
+
+        <div>
+            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffriends.tv%2Fvideos%2F10155196344374576%2F&show_text=1&width=560"
+                width="560" height="426" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+
+            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffriends.tv%2Fvideos%2F10155159366374576%2F&show_text=1&width=560"
+                width="560" height="445" style="border:none;overflow:hidden;text-align:center;" scrolling="no" frameborder="0" allowTransparency="true"
+                allowFullScreen="true"></iframe>
+
+            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffriends.tv%2Fvideos%2F10155196336409576%2F&show_text=1&width=560"
+                width="560" height="407" style="border:none;overflow:hidden;text-align:center;" scrolling="no" frameborder="0" allowTransparency="true"
+                allowFullScreen="true"></iframe>
+        </div>
+    </div>
+
+
     <script src="app.js"></script>
 </body>
+
 </html>
