Changes in sw.js

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Facebook Posts PWA</title>
 
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="StarWars PWA">
+    <meta name="apple-mobile-web-app-title" content="Facebook Posts PWA">
     <link rel="apple-touch-icon" href="icons/icon-152x152.png">
     <meta name="msapplication-TileImage" content="icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
@@ -19,25 +19,26 @@
 
 <body>
     <div class="container">
-        <h1>My PWA</h1>
+        <h1>Facebook Posts PWA</h1>
 
-        <div>
+        <div id="photos">
             <img src='gallery/1.jpg'>
             <img src='gallery/2.jpg'>
             <img src='gallery/3.jpg'>
         </div>
 
-        <div>
+        <div id="posts">
             <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffriends.tv%2Fvideos%2F10155196344374576%2F&show_text=1&width=560"
-                width="560" height="426" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+                width="560" height="426" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+                allowFullScreen="true"></iframe>
 
             <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffriends.tv%2Fvideos%2F10155159366374576%2F&show_text=1&width=560"
-                width="560" height="445" style="border:none;overflow:hidden;text-align:center;" scrolling="no" frameborder="0" allowTransparency="true"
-                allowFullScreen="true"></iframe>
+                width="560" height="445" style="border:none;overflow:hidden;text-align:center;" scrolling="no" frameborder="0"
+                allowTransparency="true" allowFullScreen="true"></iframe>
 
             <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffriends.tv%2Fvideos%2F10155196336409576%2F&show_text=1&width=560"
-                width="560" height="407" style="border:none;overflow:hidden;text-align:center;" scrolling="no" frameborder="0" allowTransparency="true"
-                allowFullScreen="true"></iframe>
+                width="560" height="407" style="border:none;overflow:hidden;text-align:center;" scrolling="no" frameborder="0"
+                allowTransparency="true" allowFullScreen="true"></iframe>
         </div>
     </div>
 
